2005-01-19  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_pdf_surface.c: Add byteswap macros missing for
	bigendian architectures.

2005-01-19  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (XFAIL_TESTS): Remove fill_rule and
	leaky_polygon from expected failures list. Both of these bugs have
	fixes, (fill_rule is fixed by reverting cairo_traps.c to 1.16, and
	leaky_polygon is fixed in a newer libpixman).

	* src/cairo_wideint.h: Remove const qualifiers from the header
	file as well.

	* src/cairo_wideint.c: Remove useless const qualifier from
	functions returning simple values, (quiets the warning in
	gcc4). Thanks to John Ellson <ellson@research.att.com>. Closes bug
	#2299.

	* BUGS: Add bugs on cairo_surface_create_for_image, bad names for
	cairo_font_set_transform and cairo_font_current_transform,
	segfault on AMD64.

2005-01-17  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_pdf_surface.c (_cairo_pdf_document_get_font): Fix
	double free in error path.
	(cairo_pdf_ft_font_create): Reference the unscaled font to keep
	the FT_Face around.
	(cairo_pdf_ft_font_generate): Initialize end to avoid compiler
	warning; bail out if table write fails. Fixes from Owen.

2005-01-17  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_pdf_surface.c: Add preliminary text support, including
	support for truetype font subsetting.

	* src/cairoint.h: Change type of 'surface' argument in show_glyphs
	to void * as it is for all other surface virtual functions.
	* src/cairo_xlib_surface.c (_cairo_xlib_surface_show_glyphs):
	Update accordingly.

	* configure.in: Add check for endianess.
	
	* src/cairo_array.c (_cairo_array_grow_by): Fix bug in array
	growing loop.
	(_cairo_array_append): Accept NULL for elements argument, in which
	case we just allocate space in the array.

2005-01-17  Kristian Høgsberg  <krh@redhat.com>

	* test/Makefile.am (EXTRA_DIST): Take image_rotate-ref.png out of
	EXTRA_DIST until we can actually render it correctly.